--- a/packages/excalidraw/components/Sidebar/Sidebar.scss
+++ b/packages/excalidraw/components/Sidebar/Sidebar.scss
@@ -109,6 +109,8 @@
       display: flex;
       flex-direction: column;
       outline: none;
+      position: relative;
+      overflow: hidden;
     }
 
     [role="tabpanel"][data-state="inactive"] {
@@ -122,7 +124,7 @@
     }
   }
 
-  .sidebar-tabs-root > .sidebar__header {
+  .sidebar-tabs-root>.sidebar__header {
     padding-top: 0;
     padding-bottom: 1rem;
   }
